started geolocation process

--- a/signUp.html
+++ b/signUp.html
@@ -14,5 +14,5 @@
         </ul>
     </head>
     <body>
-        <h1 class="mainHeader">Please Create an Account to Make Better Use of Social Restaurants!</h1>
+        <h1 class="mainHeader">Please Create an Account!</h1>
     </body>
