--- a/signUp.html
+++ b/signUp.html
@@ -1,3 +1,7 @@
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
 <!DOCTYPE html>
 <html lang = "en">
     <head>
@@ -12,7 +16,42 @@
             <li style="float:right" class="loginBtn"><a href="login.html">Login</a></li>
             <li style="float:right"><a href="signUp.html">Sign Up</a></li>
         </ul>
+         <!--Bootsrap 4 CDN-->
+         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+         <!--Fontawesome CDN-->
+         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     </head>
     <body>
         <h1 class="mainHeader">Please Create an Account!</h1>
+        <div class="container">
+            <div class="d-flex justify-content-center h-100">
+                <div class="card">
+                    <div class="card-header">
+                        <h3>Create an Account</h3>
+                    </div>
+                    <div class="card-body">
+                        <form>
+                            <div class="input-group form-group">
+                                <input type="text" class="form-control" placeholder="First Name">
+                            </div>
+                            <div class="input-group form-group">
+                                <input type="text" class="form-control" placeholder="Last Name">
+                            </div>
+                            <div class="input-group form-group">
+                                <input type="text" class="form-control" placeholder="Email">
+                            </div>
+                            <div class="input-group form-group">
+                                <input type="text" class="form-control" placeholder="Username">
+                            </div>
+                            <div class="input-group form-group">
+                                <input type="password" class="form-control" placeholder="Password">
+                            </div>
+                            <div class="form-group">
+                                <input type="submit" value="Create Account" class="btn center login_btn">
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
     </body>
