Resolved a myriad of formatting issues and standardized % for positioning

--- a/friends.html
+++ b/friends.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset = "UTF-8">
         <meta name = "viewport" content = "width = device-width, initial-scale = 1.0">
-        <title>Social Restaurant Web App</title>
+        <title>Friends</title>
         <link rel = "stylesheet" href="friends.css">
         <ul class="btnGroup">
             <li class="homeBtn"><a href="socialRestaurantHome.html">Home</a></li>
@@ -16,3 +16,4 @@
     <body>
         <h1 class="mainHeader">Welcome to the Friends Section!</h1>
     </body>
+</html>
