--- a/socialRestaurantHome.html
+++ b/socialRestaurantHome.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset = "UTF-8">
         <meta name = "viewport" content = "width = device-width, initial-scale = 1.0">
-        <title>Social Restaurant Web App</title>
+        <title>Home</title>
         <link rel = "stylesheet" href="socialRestaurantHome.css">
         <script type="module" src="./socialRestaurant.js"></script>
         <ul class="btnGroup">
@@ -15,11 +15,9 @@
     </head>
     <body onload = initMap()>
         <div id="map"></div>
+        <h1 class="mainHeader">Welcome to Social Restaurants!</h1>
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB41DRUbKWJHPxaFjMAwdrzWzbVKartNGg&callback=initMap&v=weekly"
         defer>
         </script>
-        <h1 class="mainHeader">Welcome to Social Restaurants!</h1>
-        <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB41DRUbKWJHPxaFjMAwdrzWzbVKartNGg&callback=initMap&v=weekly"
-        defer>
-        </script> -->
     </body>
+</html>
