--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
     <head>
         <meta charset = "UTF-8">
         <meta name = "viewport" content = "width = device-width, initial-scale = 1.0">
-        <title>Social Restaurant Web App</title>
+        <title>Login</title>
         <link rel = "stylesheet" href = "login.css">
         <ul class="btnGroup">
             <li class="homeBtn"><a href="socialRestaurantHome.html">Home</a></li>
@@ -36,7 +36,6 @@
                                     <span class="input-group-text"><i class="fas fa-user"></i></span>
                                 </div>
                                 <input type="text" class="form-control" placeholder="email/username">
-                                
                             </div>
                             <div class="input-group form-group">
                                 <div class="input-group-prepend">
@@ -48,7 +47,7 @@
                                 <input type="checkbox">Remember Me
                             </div>
                             <div class="form-group">
-                                <input type="submit" value="Login" class="btn center login_btn">
+                                <input type="submit" value="Login" class="btn login_btn">
                             </div>
                         </form>
                     </div>
@@ -61,3 +60,4 @@
             </div>
         </div>
     </body>
+</html>
