--- a/signUp.html
+++ b/signUp.html
@@ -7,7 +7,7 @@
     <head>
         <meta charset = "UTF-8">
         <meta name = "viewport" content = "width = device-width, initial-scale = 1.0">
-        <title>Social Restaurant Web App</title>
+        <title>Sign Up</title>
         <link rel = "stylesheet" href="signUp.css">
         <ul class="btnGroup">
             <li class="homeBtn"><a href="socialRestaurantHome.html">Home</a></li>
@@ -27,27 +27,27 @@
             <div class="d-flex justify-content-center h-100">
                 <div class="card">
                     <div class="card-header">
-                        <h3>Create an Account</h3>
+                        <h3 style = "color: #e4a700">Create an Account</h3>
                     </div>
                     <div class="card-body">
                         <form>
                             <div class="input-group form-group">
-                                <input type="text" class="form-control" placeholder="First Name">
+                                <input type="text" class="form-control" style = "background-color: #a47e1b" placeholder="First Name">
                             </div>
                             <div class="input-group form-group">
-                                <input type="text" class="form-control" placeholder="Last Name">
+                                <input type="text" class="form-control" style = "background-color: #dbb42c" placeholder="Last Name">
                             </div>
                             <div class="input-group form-group">
-                                <input type="text" class="form-control" placeholder="Email">
+                                <input type="text" class="form-control" style = "background-color: #9ef01a" placeholder="Email">
                             </div>
                             <div class="input-group form-group">
-                                <input type="text" class="form-control" placeholder="Username">
+                                <input type="text" class="form-control" style = "background-color: #004b23" placeholder="Username">
                             </div>
                             <div class="input-group form-group">
-                                <input type="password" class="form-control" placeholder="Password">
+                                <input type="password" class="form-control" style = "background-color: #3c6006" placeholder="Password">
                             </div>
                             <div class="form-group">
-                                <input type="submit" value="Create Account" class="btn center login_btn">
+                                <input type="submit" value="Create Account" class="btn login_btn">
                             </div>
                         </form>
                     </div>
@@ -55,3 +55,4 @@
             </div>
         </div>
     </body>
+</html>
