google maps api implementation started

--- a/signUp.html
+++ b/signUp.html
@@ -22,7 +22,7 @@
          <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     </head>
     <body>
-        <h1 class="mainHeader">Please Create an Account!</h1>
+        <h1 class="mainHeader">Please Sign Up!</h1>
         <div class="container">
             <div class="d-flex justify-content-center h-100">
                 <div class="card">
@@ -32,19 +32,19 @@
                     <div class="card-body">
                         <form>
                             <div class="input-group form-group">
-                                <input type="text" class="form-control" style = "background-color: #a47e1b" placeholder="First Name">
+                                <input type="text" class="form-control" style = "background-color: #9ef01acd" placeholder="First Name">
                             </div>
                             <div class="input-group form-group">
-                                <input type="text" class="form-control" style = "background-color: #dbb42c" placeholder="Last Name">
+                                <input type="text" class="form-control" style = "background-color: #9ef01acd" placeholder="Last Name">
                             </div>
                             <div class="input-group form-group">
-                                <input type="text" class="form-control" style = "background-color: #9ef01a" placeholder="Email">
+                                <input type="text" class="form-control" style = "background-color: #9ef01acd" placeholder="Email">
                             </div>
                             <div class="input-group form-group">
-                                <input type="text" class="form-control" style = "background-color: #004b23" placeholder="Username">
+                                <input type="text" class="form-control" style = "background-color: #9ef01acd" placeholder="Username">
                             </div>
                             <div class="input-group form-group">
-                                <input type="password" class="form-control" style = "background-color: #3c6006" placeholder="Password">
+                                <input type="password" class="form-control" style = "background-color: #9ef01acd" placeholder="Password">
                             </div>
                             <div class="form-group">
                                 <input type="submit" value="Create Account" class="btn login_btn">
