--- a/signUp.html
+++ b/signUp.html
@@ -3,56 +3,63 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
 <!DOCTYPE html>
-<html lang = "en">
-    <head>
-        <meta charset = "UTF-8">
-        <meta name = "viewport" content = "width = device-width, initial-scale = 1.0">
-        <title>Sign Up</title>
-        <link rel = "stylesheet" href="signUp.css">
-        <ul class="btnGroup">
-            <li class="homeBtn"><a href="socialRestaurantHome.html">Home</a></li>
-            <li><a href="friends.html">Friends</a></li>
-            <li><a href="restaurants.html">Restaurants</a></li>
-            <li style="float:right" class="loginBtn"><a href="login.html">Login</a></li>
-            <li style="float:right"><a href="signUp.html">Sign Up</a></li>
-        </ul>
-         <!--Bootsrap 4 CDN-->
-         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-         <!--Fontawesome CDN-->
-         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-    </head>
-    <body>
-        <h1 class="mainHeader">Please Sign Up!</h1>
-        <div class="container">
-            <div class="d-flex justify-content-center h-100">
-                <div class="card">
-                    <div class="card-header">
-                        <h3 style = "color: #e4a700">Create an Account</h3>
-                    </div>
-                    <div class="card-body">
-                        <form>
-                            <div class="input-group form-group">
-                                <input type="text" class="form-control" style = "background-color: #9ef01acd" placeholder="First Name">
-                            </div>
-                            <div class="input-group form-group">
-                                <input type="text" class="form-control" style = "background-color: #9ef01acd" placeholder="Last Name">
-                            </div>
-                            <div class="input-group form-group">
-                                <input type="text" class="form-control" style = "background-color: #9ef01acd" placeholder="Email">
-                            </div>
-                            <div class="input-group form-group">
-                                <input type="text" class="form-control" style = "background-color: #9ef01acd" placeholder="Username">
-                            </div>
-                            <div class="input-group form-group">
-                                <input type="password" class="form-control" style = "background-color: #9ef01acd" placeholder="Password">
-                            </div>
-                            <div class="form-group">
-                                <input type="submit" value="Create Account" class="btn login_btn">
-                            </div>
-                        </form>
-                    </div>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width = device-width, initial-scale = 1.0">
+    <title>Sign Up</title>
+    <link rel="stylesheet" href="signUp.css">
+    <ul class="btnGroup">
+        <li class="homeBtn"><a href="socialRestaurantHome.html">Home</a></li>
+        <li><a href="friends.html">Friends</a></li>
+        <li><a href="restaurants.html">Restaurants</a></li>
+        <li style="float:right" class="loginBtn"><a href="login.html">Login</a></li>
+        <li style="float:right"><a href="signUp.html">Sign Up</a></li>
+    </ul>
+    <!--Bootsrap 4 CDN-->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <!--Fontawesome CDN-->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
+        integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+</head>
+<body>
+    <h1 class="mainHeader">Please Sign Up!</h1>
+    <div class="container">
+        <div class="d-flex justify-content-center h-100">
+            <div class="card">
+                <div class="card-header">
+                    <h3 style="color: #e4a700">Create an Account</h3>
+                </div>
+                <div class="card-body">
+                    <form>
+                        <div class="input-group form-group">
+                            <input type="text" class="form-control" style="background-color: #9ef01acd"
+                                placeholder="First Name">
+                        </div>
+                        <div class="input-group form-group">
+                            <input type="text" class="form-control" style="background-color: #9ef01acd"
+                                placeholder="Last Name">
+                        </div>
+                        <div class="input-group form-group">
+                            <input type="text" class="form-control" style="background-color: #9ef01acd"
+                                placeholder="Email">
+                        </div>
+                        <div class="input-group form-group">
+                            <input type="text" class="form-control" style="background-color: #9ef01acd"
+                                placeholder="Username">
+                        </div>
+                        <div class="input-group form-group">
+                            <input type="password" class="form-control" style="background-color: #9ef01acd"
+                                placeholder="Password">
+                        </div>
+                        <div class="form-group">
+                            <input type="submit" value="Create Account" class="btn login_btn">
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
-    </body>
+    </div>
+</body>
 </html>
