--- a/signUp.html
+++ b/signUp.html
@@ -66,73 +66,119 @@
         </div>
     </div>
 </body>
-<script src="https://www.gstatic.com/firebasejs/12.4.7/firebase-app.js"></script>
+<!-- <script src="https://www.gstatic.com/firebasejs/12.4.7/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/12.4.7/firebase-database.js"></script>
-<script src="https://www.gstatic.com/firebasejs/12.4.7/firebase-auth.js"></script>
-<script type = "module">
+<script src="https://www.gstatic.com/firebasejs/12.4.7/firebase-auth.js"></script> -->
+<!-- <script type="module">
+    import { initializeApp } from 'firebase/app';
+    import { getAuth, onAuthStateChanged } from 'firebase/auth';
+    // import { getFirestore, collection, getDocs } from 'firebase/firestore';
+
+    const firebaseApp = initializeApp({
+        apiKey: "AIzaSyDplXTrUHgAVMHyZXLUv4n9jA5YjZ6nmH8",
+        authDomain: "auth-3d904.firebaseapp.com",
+        databaseURL: "https://auth-3d904-default-rtdb.firebaseio.com",
+        projectId: "auth-3d904",
+        storageBucket: "auth-3d904.appspot.com",
+        messagingSenderId: "923624233664",
+        appId: "1:923624233664:web:2e600adc4d6b1972c92b25"
+    });
+
+    const auth = getAuth(firebaseApp);
+    console.log('test' + auth)
+    // const db = getFirestore(firebaseApp);
+    // db.collection('todos').getDocs();
+    // const todosCol = collection(db, 'todos');
+    // const snapshot = await getDocs(todosCol);
+
+    // detect auth state
+    onAuthStateChanged(auth, user => {
+        if (user != null) {
+            console.log('logged in!');
+        } else {
+            console.log('no user!');
+        }
+    });
+</script> -->
+<script type="module">
 
     // Import the functions you need from the SDKs you need
-//    import { initializeApp } from "https://www.gstatic.com/firebasejs/12.4.7/firebase-app.js";
-//    import { getDatabase } from "https://www.gstatic.com/firebasejs/12.4.7/firebase-database.js";
-//    import { getAuth, createUserWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/12.4.7/firebase-auth.js";
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.0.0/firebase-app.js";
+    import { getDatabase } from "https://www.gstatic.com/firebasejs/9.0.0/firebase-database.js";
+    import { getAuth, createUserWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/9.0.0/firebase-auth.js";
+    import { getStorage } from "https://www.gstatic.com/firebasejs/9.0.0/firebase-storage.js";
 
-<!-- Replace "9.0.0" with the latest version -->
+    // TODO: Add SDKs for Firebase products that you want to use
+    // https://firebase.google.com/docs/web/setup#available-libraries
 
-   // TODO: Add SDKs for Firebase products that you want to use
-   // https://firebase.google.com/docs/web/setup#available-libraries
- 
-   // Your web app's Firebase configuration
-   const firebaseConfig = {
-	 apiKey: "AIzaSyDplXTrUHgAVMHyZXLUv4n9jA5YjZ6nmH8",
-	 authDomain: "auth-3d904.firebaseapp.com",
-	 databaseURL: "https://auth-3d904-default-rtdb.firebaseio.com",
-	 projectId: "auth-3d904",
-	 storageBucket: "auth-3d904.appspot.com",
-	 messagingSenderId: "923624233664",
-	 appId: "1:923624233664:web:2e600adc4d6b1972c92b25"
-   };
- 
-   // Initialize Firebase
-   const app = initializeApp(firebaseConfig);
-   
-   const database = getDatabase(app);
-   const auth = getAuth();
-   
-   function handleOnSubmit() {
+    // Your web app's Firebase configuration
+    const firebaseConfig = {
+        apiKey: "AIzaSyDplXTrUHgAVMHyZXLUv4n9jA5YjZ6nmH8",
+        authDomain: "auth-3d904.firebaseapp.com",
+        databaseURL: "https://auth-3d904-default-rtdb.firebaseio.com",
+        projectId: "auth-3d904",
+        storageBucket: "auth-3d904.appspot.com",
+        messagingSenderId: "923624233664",
+        appId: "1:923624233664:web:2e600adc4d6b1972c92b25"
+    };
 
-   console.log("test " +firebase.app())
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+    const database = getDatabase(app);
+    const auth = getAuth();
+    const storage = getStorage(app);
+    console.log("pre " + app)
 
-   var firstName = document.getElementById("firstName").value;
-   var lastName = document.getElementById("lastName").value;
-   var email = document.getElementById("email").value;
-   var userName = document.getElementById("userName").value;
-   var password = document.getElementById("password").value;
+    function handleOnSubmit() {
+        console.log("test " + app.name);
+        var firstName = document.getElementById("firstName").value;
+        var lastName = document.getElementById("lastName").value;
+        var email = document.getElementById("email").value;
+        var userName = document.getElementById("userName").value;
+        var password = document.getElementById("password").value;
 
-   createUserWithEmailAndPassword(auth, email, password)
-   .then((userCredential) => {
+        //    createUserWithEmailAndPassword(auth, email, password)
+        //    .then((userCredential) => {
 
-	
+        //     // Save to database
+        //     const dbRef = ref(database, 'users/' + uid);
+        //     set(dbRef, userData);
+        //    // Signed in 
+        //    const user = userCredential.user;
+        //    alert("user created!")
+        //    // ...
+        //  })
+        //  .catch((error) => {
+        //    const errorCode = error.code;
+        //    const errorMessage = error.message;
+        //    alert(errorMessage);
+        //    // ..
+        //  });
+        createUserWithEmailAndPassword(auth, email, password)
+            .then((userCredential) => {
+                const user = userCredential.user;
+                const uid = user.uid; // Capture the user ID
+                const userData = { // Define the user data object
+                    firstName: firstName,
+                    lastName: lastName,
+                    email: email,
+                    userName: userName
+                };
+                // Save to database
+                const dbRef = ref(database, 'users/' + uid);
+                set(dbRef, userData)
+                    .then(() => {
+                        alert("User created and data saved!");
+                    })
+                    .catch((error) => {
+                        alert("Error saving user data: " + error.message);
+                    });
+            })
+            .catch((error) => {
+                alert("Error creating user: " + error.message);
+            });
 
-    // Save to database
-    const dbRef = ref(database, 'users/' + uid);
-    set(dbRef, userData);
-   // Signed in 
-   //const user = userCredential.user;
-   alert("user created!")
-   // ...
- })
- .catch((error) => {
-   const errorCode = error.code;
-   const errorMessage = error.message;
-   alert(errorMessage);
-   // ..
- });
 
-
-
-}
-
-
-</script>
+    } </script>
 
 </html>
