--- a/login.html
+++ b/login.html
@@ -1,9 +1,11 @@
 <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+
 
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width = device-width, initial-scale = 1.0">
@@ -23,6 +25,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
         integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 </head>
+
 <body>
     <h1 class="mainHeader">Please Login!</h1>
     <div class="container">
@@ -37,19 +40,19 @@
                             <div class="input-group-prepend">
                                 <span class="input-group-text"><i class="fas fa-user"></i></span>
                             </div>
-                            <input type="text" class="form-control" placeholder="email/username">
+                            <input type="text" class="form-control"id="loginInput" placeholder="email/username">
                         </div>
                         <div class="input-group form-group">
                             <div class="input-group-prepend">
                                 <span class="input-group-text"><i class="fas fa-key"></i></span>
                             </div>
-                            <input type="password" class="form-control" placeholder="password">
+                            <input type="password" class="form-control"id="passwordInput" placeholder="password">
                         </div>
                         <div class="row align-items-center remember">
                             <input type="checkbox">Remember Me
                         </div>
                         <div class="form-group">
-                            <input type="submit" value="Login" class="btn login_btn">
+                            <input type="submit" value="Login" class="btn login_btn" id="loginButton">
                         </div>
                     </form>
                 </div>
@@ -61,5 +64,93 @@
             </div>
         </div>
     </div>
+    <!-- Firebase Configuration and Login Logic --> 
+    <script type="module">
+         // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/9.0.0/firebase-app.js";
+  import { getAuth, createUserWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/9.0.0/firebase-auth.js";
+  import { getDatabase, ref, set } from "https://www.gstatic.com/firebasejs/9.0.0/firebase-database.js";
+
+        const firebaseConfig = {
+            apiKey: "AIzaSyDplXTrUHgAVMHyZXLUv4n9jA5YjZ6nmH8",
+            authDomain: "auth-3d904.firebaseapp.com",
+            databaseURL: "https://auth-3d904-default-rtdb.firebaseio.com",
+            projectId: "auth-3d904",
+            storageBucket: "auth-3d904.appspot.com",
+            messagingSenderId: "923624233664",
+            appId: "1:923624233664:web:2e600adc4d6b1972c92b25"
+        };
+        // Initialize Firebase
+        const app = initializeApp(firebaseConfig);
+        const auth = getAuth();
+        const database = getDatabase(app);
+
+         // Wait for the document to be fully loaded
+         document.addEventListener("DOMContentLoaded", () => {
+        // Login Button Click Event
+        document.getElementById("loginButton").addEventListener("click", () => {
+            const emailOrUsername = document.getElementById("loginInput").value;
+            const password = document.getElementById("passwordInput").value;
+
+        // Authenticate using Firebase Authentication
+    auth.signInWithEmailAndPassword(emailOrUsername, password)
+      //  .then((userCredential) => {
+        .then(function() {
+            var user = auth.currentUser
+            var database_ref = database.ref()
+
+            var user_data= {
+                lastLogin : Date.now()
+            }
+            database_ref.child('users/'+user.uid).update(user_data)
+            alert("User Logged In!!!!!!!!!!")
+        })
+        .catch(function(error){
+            var error_code = error.code
+            var error_message = error.message
+            console.error("Authentication Error:", error_code, error_message);
+            alert(error_message)
+
+        })
+
+
+            
+//             // User login successful
+//             const user = userCredential.user;
+//             console.log("User logged in:", user);
+
+//             // Get additional user information if needed
+//             const uid = user.uid;
+
+//             // Assuming you have a 'users' collection in your database
+//             const userRef = ref(database, 'users/' + uid);
+
+//             // Fetch user data from the database
+//             get(userRef).then((snapshot) => {
+//                 if (snapshot.exists()) {
+//                     const userData = snapshot.val();
+//                     console.log("User data:", userData);
+
+//                     // Redirect after successful login
+//                     window.location.href = "google.com";
+//                 } else {
+//                     console.log("User data not found.");
+//                 }
+//             }).catch((error) => {
+//                 console.error("Error getting user data:", error);
+//             });
+//         })
+//         .catch((error) => {
+//             // An error occurred during login
+//             const errorCode = error.code;
+//             const errorMessage = error.message;
+//             console.error("Error logging in:", errorCode, errorMessage);
+//             // You can show an error message to the user
+         });
+    });
+
+
+    </script>
 </body>
+
 </html>
