--- a/testing1.html
+++ b/testing1.html
@@ -67,115 +67,74 @@
 </body>
 
 <script type="module">
-  // Import the functions you need from the SDKs you need
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/9.0.0/firebase-app.js";
-  import { getDatabase, ref, set } from "https://www.gstatic.com/firebasejs/9.0.0/firebase-database.js";
-  import { getAuth, createUserWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/9.0.0/firebase-auth.js";
-  import { getStorage } from "https://www.gstatic.com/firebasejs/9.0.0/firebase-storage.js";
+    // Import the functions you need from the SDKs you need
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.0.0/firebase-app.js";
+    import { getDatabase, ref, set } from "https://www.gstatic.com/firebasejs/9.0.0/firebase-database.js";
+    import { getAuth, createUserWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/9.0.0/firebase-auth.js";
+    
+    // TODO: Add SDKs for Firebase products that you want to use
+    // https://firebase.google.com/docs/web/setup#available-libraries
 
-  // TODO: Add SDKs for Firebase products that you want to use
-  // https://firebase.google.com/docs/web/setup#available-libraries
+    // Your web app's Firebase configuration
+    const firebaseConfig = {
+        apiKey: "AIzaSyDplXTrUHgAVMHyZXLUv4n9jA5YjZ6nmH8",
+        authDomain: "auth-3d904.firebaseapp.com",
+        databaseURL: "https://auth-3d904-default-rtdb.firebaseio.com",
+        projectId: "auth-3d904",
+        storageBucket: "auth-3d904.appspot.com",
+        messagingSenderId: "923624233664",
+        appId: "1:923624233664:web:2e600adc4d6b1972c92b25"
+    };
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+    const database = getDatabase(app);
+    const auth = getAuth();
 
-  // Your web app's Firebase configuration
-  const firebaseConfig = {
-	  apiKey: "AIzaSyDplXTrUHgAVMHyZXLUv4n9jA5YjZ6nmH8",
-	  authDomain: "auth-3d904.firebaseapp.com",
-	  databaseURL: "https://auth-3d904-default-rtdb.firebaseio.com",
-	  projectId: "auth-3d904",
-	  storageBucket: "auth-3d904.appspot.com",
-	  messagingSenderId: "923624233664",
-	  appId: "1:923624233664:web:2e600adc4d6b1972c92b25"
-  };
-// Initialize Firebase
-const app = initializeApp(firebaseConfig);
-const database = getDatabase(app);
-const auth = getAuth();
-const storage = getStorage(app);
 
-function handleOnSubmit() {
+    function handleOnSubmit() {
 
-	const firstName = document.getElementById("firstName").value;
-	const lastName = document.getElementById("lastName").value;
-	const email = document.getElementById("email").value;
-	const userName = document.getElementById("userName").value;
-	const password = document.getElementById("password").value;
-	// Validate input fields
-	if (validateField(firstName) == false) {
-		alert("First Name Cannot be Empty!");
-		return;
-	}
-	if (validateField(lastName) == false) {
-		alert("Last Name Cannot be Empty!");
-		return;
-	}
-	if (validateEmail(email) == false) {
-		alert("Please Enter a Valid Email Address!");
-		return;
-	}
-	if (validateField(userName) == false) {
-		alert("Username Cannot be Empty!");
-		return;
-	}
-	if (validatePassword(password) == false) {
-		alert("Please Enter a Password of at Least 8 Characters!");
-		return;
-	}
 
-	createUserWithEmailAndPassword(auth, email, password)
-		.then((userCredential) => {
-			// User creation successful
-			const user = userCredential.user;
-			const uid = user.uid; // Capture the user ID
-			const userData = { // Define the user data object
-				firstName: firstName,
-				lastName: lastName,
-				email: email,
-				userName: userName,
-				password: password,
-                last_login: Date.now()
-			};
-			console.log("UID:", uid);
-			console.log("User Data:", userData);
+        const email = document.getElementById("email").value;
+        const password = document.getElementById("password").value;
+        // Validate input fields
 
-			const dbRef = ref(database, 'users/' + uid);
-			set(dbRef, userData)
-				.then(() => {
-					console.log("User data saved to Realtime Database");
-					alert("User created and data saved!");
-				}).catch((error) => {
-					console.error("Error saving user data:", error);
-					alert("Error saving user data: " + error.message);
-				});
 
-		})
-		.catch((error) => {
-			// An error occurred during user creation
-			const errorCode = error.code;
-			const errorMessage = error.message;
-			console.error("Error creating user:", errorCode, errorMessage);
-		});
+        signInWithEmailAndPassword(auth, email, password)
+            .then((userCredential) => {
+                // User login successful
+                const user = userCredential.user;
+                console.log("User logged in:", user);
 
-}
-function validateEmail(email) {
-		const expression = /^[^@]+@\w+(\.\w+)+\w$/;
-		if (expression.test(email) == true) {
-			return true;
-		}
-		return false;
-	}
-	function validatePassword(password) {
-		if (password.length < 8) {
-			return false;
-		}
-		return true;
-	}
-	function validateField(check) {
-		if (check.length < 1) {
-			return false;
-		}
-		return true;
-	}
-	document.addEventListener("DOMContentLoaded", () => {
+                // Get additional user information if needed
+                const uid = user.uid;
+
+                // Assuming you have a 'users' collection in your database
+                const userRef = ref(database, 'users/' + uid);
+
+                // Fetch user data from the database
+                get(userRef).then((snapshot) => {
+                    if (snapshot.exists()) {
+                        const userData = snapshot.val();
+                        console.log("User data:", userData);
+
+                        // Redirect after successful login
+                        window.location.href = "google.com";
+                    } else {
+                        console.log("User data not found.");
+                    }
+                }).catch((error) => {
+                    console.error("Error getting user data:", error);
+                });
+            })
+            .catch((error) => {
+                // An error occurred during login
+                const errorCode = error.code;
+                const errorMessage = error.message;
+                console.error("Error logging in:", errorCode, errorMessage);
+                // You can show an error message to the user
+            });
+    }
+    document.addEventListener("DOMContentLoaded", () => {
         const createAccountButton = document.querySelector(".login_btn");
 
         createAccountButton.addEventListener("click", (event) => {
@@ -185,7 +144,7 @@ function validateEmail(email) {
     });
 
 
-  
+
 
 </script>
 
