--- a/restaurants.html
+++ b/restaurants.html
@@ -1,20 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Restaurants</title>
     <link rel="stylesheet" href="restaurants.css">
     <script type="module" src="socialRestaurant.js"></script>
-    <ul class="btnGroup">
-        <li class="homeBtn"><a href="socialRestaurantHome.html">Home</a></li>
-        <li><a href="friends.html">Friends</a></li>
-        <li><a href="restaurants.html">Restaurants</a></li>
-        <li style="float:right" class="logoutBtn" id="logoutButton"><a>Logout</a></li>
-        <li style="float:right" class="loginBtn"><a href="login.html">Login</a></li>
-        <li style="float:right"><a href="signUp.html">Sign Up</a></li>
-    </ul>
     <script>
         // Promisified getCurrentPosition
         function getPosition() {
@@ -33,23 +24,30 @@
                 const position = await getPosition();
                 window.latitude = position.coords.latitude;
                 window.longitude = position.coords.longitude;
-
                 initMap();
             } catch (error) {
                 console.error(error);
             }
         }
-
         // Load the map when the DOM is ready
         document.addEventListener("DOMContentLoaded", () => {
             initialize();
         });
     </script>
 </head>
-
 <body>
     <h1 class="mainHeader">Welcome to the Restaurants Section!</h1>
     <div id="map"></div>
+    <ul class="btnGroup">
+        <li class="homeBtn"><a href="socialRestaurantHome.html">Home</a></li>
+        <li><a href="friends.html">Friends</a></li>
+        <li><a href="restaurants.html">Restaurants</a></li>
+        <li style="text-align: right;" id="loginSignupContainer">
+            <a class ="signUpBtn" href="signUp.html" style="display: inline-block; margin-left: 700px">Sign Up</a>
+            <a class="loginBtn" href="login.html" style="display: inline-block; margin-left: 10px;">Login</a>
+        </li>                     
+        <li style="float:right" class="logoutBtn" id="logoutButton"><a>Logout</a></li>
+    </ul>
     <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/9.0.0/firebase-app.js";
         import { getAuth, signOut } from "https://www.gstatic.com/firebasejs/9.0.0/firebase-auth.js";
@@ -66,28 +64,34 @@
         const app = initializeApp(firebaseConfig);
         const auth = getAuth();
 
+        auth.onAuthStateChanged(user => {
+            const loginSignupContainer = document.getElementById("loginSignupContainer");
+            const logoutButton = document.getElementById("logoutButton");
+
+            if (user) {
+                loginSignupContainer.style.display = "none";
+                logoutButton.style.display = "block";
+            } else {
+                loginSignupContainer.style.display = "inline";
+                logoutButton.style.display = "none";
+            }
+        });
+
         document.addEventListener("DOMContentLoaded", () => {
             // Logout Button Click Event
             document.getElementById("logoutButton").addEventListener("click", async () => {
-                if (auth.currentUser != null) {
-                    try {
-                        await signOut(auth);
-                        alert("User Logged Out!");
-                        //window.location.href = "socialRestaurantHome.html";
-                    } catch (error) {
-                        console.error("Logout Error:", error.message);
-                        alert("Logout Error: " + error.message);
-                    }
-                } else {
-                    alert("You aren't logged in!");
+                try {
+                    await signOut(auth);
+                    alert("User Logged Out!");
+                    window.location.href = "socialRestaurantHome.html";
+                } catch (error) {
+                    console.error("Logout Error:", error.message);
+                    alert("Logout Error: " + error.message);
                 }
             });
         });
     </script>
     <script src="socialRestaurant.js"></script>
-    <script
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAh7G6lqPHpcWmJgIe9QbQlB1eXUuoDfaY&libraries=places&callback=initMap">
-        </script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAh7G6lqPHpcWmJgIe9QbQlB1eXUuoDfaY&libraries=places&callback=initMap"></script>
 </body>
-
 </html>
