--- a/login.html
+++ b/login.html
@@ -16,7 +16,7 @@
         <li style="float:right" class="loginBtn"><a href="login.html">Login</a></li>
         <li style="float:right"><a href="signUp.html">Sign Up</a></li>
     </ul>
-    <!--Bootsrap 4 CDN-->
+    <!--Bootstrap 4 CDN-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <!--Fontawesome CDN-->
@@ -61,9 +61,7 @@
             </div>
         </div>
     </div>
-    <!-- Firebase Configuration and Login Logic -->
     <script type="module">
-        // Import the functions you need from the SDKs you need
         import { initializeApp } from "https://www.gstatic.com/firebasejs/9.0.0/firebase-app.js";
         import { getAuth, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/9.0.0/firebase-auth.js";
         import { getDatabase, ref, update } from "https://www.gstatic.com/firebasejs/9.0.0/firebase-database.js";
@@ -77,13 +75,11 @@
             messagingSenderId: "923624233664",
             appId: "1:923624233664:web:2e600adc4d6b1972c92b25"
         };
-        // Initialize Firebase
         const app = initializeApp(firebaseConfig);
         const auth = getAuth();
         const database = getDatabase(app);
 
         document.addEventListener("DOMContentLoaded", () => {
-            // Login Button Click Event
             document.getElementById("loginButton").addEventListener("click", async () => {
                 const emailOrUsername = document.getElementById("loginInput").value;
                 const password = document.getElementById("passwordInput").value;
@@ -91,7 +87,6 @@
                 try {
                     await signInWithEmailAndPassword(auth, emailOrUsername, password);
                     alert("User Logged In!");
-                    // Redirect the user to restaurants.html
                     window.location.href = "restaurants.html";
                 } catch (error) {
                     var error_message = error.message;
